<resources>
    <string name="app_name">Partage de frais</string>
    <string name="voir_detailsDepense">Voir details</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="option_ajouter">Ajouter</string>
    <string name="option_rechercher">Rechercher</string>
    <string name="option_reset">Reset</string>
    <string name="mot_recherche">Saisir le mot recherché"</string>
    <string name="titre_Recherche">Saisie du mot pour la recherche</string>

    <string name="bouton_positif">Valider</string>
    <string name="bouton_negatif">Annuler</string>

    <string name="nom_utilisateur">Nom de l\'utilisateur : </string>
    <string name="nom_depense">Nom de la depense : </string>
    <string name="montant_depense">Montant de la depense : </string>
    <string name="titre_Ajout">Saisie la depense</string>
    <string name="titre_Ajout_utilisateur">Saisie de l\'utilisateur n°</string>

    <string name="titre_Modif">Modifier la dépense</string>
    <string name="calcul_total">Calculer le total des depenses</string>
    <string name="reset_titre">Aucune liste n\'est définie</string>
    <string name="reset_saisie_nombre">Saisir le nombre d\'utilisateur :</string>
    <string name="reset_saisie_nom_utilisateur">Nom de l\'utilisateur :</string>
    <string name="ajouter">Ajouter</string>
    <string name="creer">Créer</string>
    <string name="reset_user">Utilisateur n°</string>
</resources>